TEST_PROGRAMS/INVALID/grady_weber/typo.min
#Typo
var x : itn;
var y : float;
x = 10;

